# alliance-lib

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
alliancelib/: __init__.py
alliancelib/algorithms/: __init__.py
alliancelib/algorithms/direct/: __init__.py  minimal.py  solution_size.py
alliancelib/algorithms/heuristics/: cost_functions.py  cost_reduction.py  genetic.py  swarm.py
alliancelib/algorithms/ilp/: __init__.py  common.py  defensive_alliance.py  (+2 more)
alliancelib/ds/: __init__.py  alliance.py  types.py  vertex_set.py
alliancelib/experiments/: __init__.py  cleaning.py  generator.py  runner.py  util.py
alliancelib/vis/: vertexset.py
cli/: __main__.py  dataset.py  experiment_base.py  experiments.py  process.py  solver.py  util.py  visualization.py
examples/: da_heuristic_wrapper.py  defensive_alliance.py  defensive_alliance_daabc.py  defensive_alliance_genetic.py  defensive_alliance_heuristic.py  defensive_alliance_ilp.py  defensive_alliance_ilp_file.py  defensive_alliance_minimal.py  defensive_alliance_solution_size.py  defensive_alliance_solution_size_parallel.py  defensive_alliance_solution_size_vis.py  defensive_alliance_vc.py  defensive_alliance_z3.py  enumerate_gmdas.py  vertex_cover.py
heuristic/: cost-reduction.json  cost_reduction.py  eval-cr.sh  eval-ga.sh  ga.json  ga.py  heuristic.json  jobs.json  optimize.py  test.json  testcase.py  wrapper.py
jobs/: .gurobi_src  doit.sh  experiment.sh  first.sh  script.sh  ss.sh  vc-ilp.sh  z3.sh
optimization/: heuristic.json  optimize.py  test.py  testcase.json
tests/: test_ds.py
(+25 files in other folders)
